完成了登录/注册的部分

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,4 +1,21 @@
 //全局样式
+body {
+  background-color: #f5f7f9;
+}
 
 //引入图标样式
 @import "./icon.less";
+
+//页头样式
+.page-nav-bar {
+  width: 750px;
+  line-height: 128px;
+  background-color: #3296fa;
+  .van-ellipsis{
+  color: #fff;
+  font-size: 30px;
+  font-weight: normal;
+  font-family: MicrosoftYaHei;
+  }
+}
+
