--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,6 @@
+body {
+  background-color: #f5f7f9;
+}
 @font-face {
   font-family: "iconfont";
   /* Project id 2760684 */
@@ -72,4 +75,15 @@
 }
 .icon-zuopin:before {
   content: "\e615";
+}
+.page-nav-bar {
+  width: 750px;
+  line-height: 128px;
+  background-color: #3296fa;
+}
+.page-nav-bar .van-ellipsis {
+  color: #fff;
+  font-size: 30px;
+  font-weight: normal;
+  font-family: MicrosoftYaHei;
 }
