完成了首页-展示文章列表的开发

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -9,7 +9,7 @@ body {
 //页头样式
 .page-nav-bar {
   width: 750px;
-  line-height: 128px;
+  // line-height: 128px;
   background-color: #3296fa;
   .van-ellipsis{
   color: #fff;
